--- a/src/FeatureBasedFolderStructure.API/appsettings.json
+++ b/src/FeatureBasedFolderStructure.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SwaggerSettings": {
+    "Name": "Feature-Based Folder Structure API",
+    "Description": "Feature-Based Folder Structure API"
+  }
 }
