Refactor API documentation setup to use Scalar and remove Swagger configuration

--- a/src/FeatureBasedFolderStructure.API/appsettings.json
+++ b/src/FeatureBasedFolderStructure.API/appsettings.json
@@ -5,9 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "SwaggerSettings": {
-    "Name": "Feature-Based Folder Structure API",
-    "Description": "Feature-Based Folder Structure API"
-  }
+  "AllowedHosts": "*"
 }
