--- a/src/FeatureBasedFolderStructure.API/FeatureBasedFolderStructure.API.csproj
+++ b/src/FeatureBasedFolderStructure.API/FeatureBasedFolderStructure.API.csproj
@@ -23,8 +23,7 @@
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
-        <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="8.0.2" />
+        <PackageReference Include="Scalar.AspNetCore" Version="2.0.18" />
     </ItemGroup>
 
     <ItemGroup>
