--- a/src/FeatureBasedFolderStructure.Domain/FeatureBasedFolderStructure.Domain.csproj
+++ b/src/FeatureBasedFolderStructure.Domain/FeatureBasedFolderStructure.Domain.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="9.0.2" />
     </ItemGroup>
 
