--- a/src/FeatureBasedFolderStructure.Infrastructure/FeatureBasedFolderStructure.Infrastructure.csproj
+++ b/src/FeatureBasedFolderStructure.Infrastructure/FeatureBasedFolderStructure.Infrastructure.csproj
@@ -14,6 +14,7 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.6.0" />
     </ItemGroup>
 
     <ItemGroup>
