Implement JWT authentication and authorization policies

--- a/src/FeatureBasedFolderStructure.API/appsettings.json
+++ b/src/FeatureBasedFolderStructure.API/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JwtSettings": {
+    "Key": "8f4Hs9T2pL7zVcE3mK1xR5gY6bN0aQ8dı",
+    "Issuer": "https://localhost:7093",
+    "Audience": "https://localhost:7093",
+    "ExpiryInHours": 1
+  },
   "AllowedHosts": "*"
 }
