--- a/src/FeatureBasedFolderStructure.Domain/FeatureBasedFolderStructure.Domain.csproj
+++ b/src/FeatureBasedFolderStructure.Domain/FeatureBasedFolderStructure.Domain.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="FS.EntityFramework.Library" Version="9.0.6.1" />
       <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="9.0.6" />
