refactor: reorganize services and repositories into common and auth folders

--- a/src/FeatureBasedFolderStructure.Infrastructure/FeatureBasedFolderStructure.Infrastructure.csproj
+++ b/src/FeatureBasedFolderStructure.Infrastructure/FeatureBasedFolderStructure.Infrastructure.csproj
@@ -28,4 +28,8 @@
       <Reference Include="Microsoft.Extensions.Identity.Core" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Common\" />
+    </ItemGroup>
+
 </Project>
