--- a/src/FeatureBasedFolderStructure.Domain/FeatureBasedFolderStructure.Domain.csproj
+++ b/src/FeatureBasedFolderStructure.Domain/FeatureBasedFolderStructure.Domain.csproj
@@ -13,4 +13,8 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="9.0.6" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Interfaces\" />
+    </ItemGroup>
+
 </Project>
